--- a/WebApp/docker-compose.yml
+++ b/WebApp/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  backend:
+  blod-backend:
     build: ./backend
     container_name: BLOD-backend
     restart: unless-stopped
@@ -10,27 +10,26 @@ services:
       - DB_NAME=healthcloud
       - PORT=5005
     depends_on:
-      - mongodb
+      - blod-mongodb
     networks:
       - app-network
 
-  frontend:
+  blod-frontend:
     build: ./frontend/blod
     container_name: BLOD-frontend
     restart: unless-stopped
     ports:
       - "3000:3000"
     depends_on:
-      - backend
+      - blod-backend
     networks:
       - app-network
     environment:
       - REACT_APP_API_URL=http://backend:5005
-      - REACT_APP_DASHBOARD_BACKEND=http://python-service:5001
 
-  mongodb:
+  blod-mongodb:
     image: mongo:4.4.6
-    container_name: mongodb
+    container_name: blod-mongodb
     restart: always
     ports:
       - "27017:27017"
@@ -38,20 +37,9 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
-      - mongo_data:/data/db
-      - ./backend/init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.sh
-      - ./backend/BLOD.json:/docker-entrypoint-initdb.d/BLOD.json
-    networks:
-      - app-network
-
-  python-service:
-    build: ../python_service/
-    container_name: BLOD-python-service
-    restart: unless-stopped
-    ports:
-      - "5001:5001"
-    volumes:
-      - python_service_data:/data
+      - ./backend/mongo_data:/data/db
+      - ./backend/mongo_data:/mongo_data
+      - ./backend/mongo_data/init-mongo.sh:/docker-entrypoint-initdb.d/init-mongo.s
     networks:
       - app-network
 
