--- a/WebApp/frontend/blod/Dockerfile
+++ b/WebApp/frontend/blod/Dockerfile
@@ -12,4 +12,4 @@ RUN npm run build
 # Serve with a lightweight server
 RUN npm install -g serve
 EXPOSE 3000
-CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["serve", "-s", "build", "-l", "3000", "-p", "/blod"]
